--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
 		<nav class="navbar">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a href="#" class="nav-link">
+					<a href="https://www.youtube.com/watch?v=z4JJ270xx98" class="nav-link">
 						<i class="fa-solid fa-house fa-2xl center"></i>
 						<span class="link-text">Home</span>
 					</a>
 				</li>
 				
 				<li class="nav-item">
-					<a href="#" class="nav-link">
+					<a href="https://www.youtube.com/watch?v=z4JJ270xx98" class="nav-link">
 						<i class="fa-solid fa-utensils fa-2xl center"></i>
 						<span class="link-text">Food</span>
 					</a>
 				</li>
 
 				<li class="nav-item">
-					<a href="#" class="nav-link">
+					<a href="https://www.youtube.com/watch?v=z4JJ270xx98" class="nav-link">
 						<i class="fa-solid fa-location-pin fa-2xl center"></i>
 						<span class="link-text">Location</span>
 					</a>
 				</li>
 
 				<li class="nav-item">
-					<a href="#" class="nav-link">
+					<a href="https://www.youtube.com/watch?v=z4JJ270xx98" class="nav-link">
 						<i class="fa-solid fa-user fa-2xl center"></i>
 						<span class="link-text">About us</span>
 					</a>
 				</li>
 
 				<li class="nav-item">
-					<a href="#" class="nav-link">
+					<a href="https://www.youtube.com/watch?v=z4JJ270xx98" class="nav-link">
 						<i class="fa-solid fa-bars fa-2xl center"></i>
 						<span class="link-text">More</span>
 					</a>
