--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 	<link rel="stylesheet" href="styles.css">
 	<script src=script.js></script>
-	<title>Document</title>
+	<title>Tasteful Express</title>
 </head>
 	<body>
 		<nav class="navbar">
