added underline to tagline and mad tagline text uppercase

--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
 					<img src="assets/Logo cropped.png">
 				</div>
 				<section>
-					<h1>
-						Happiness at your doorstep
-					</h1>
+					<div>
+						<h1>
+							Happiness at your doorstep
+						</h1>
+					</div>
 				</section>
 			</header>
 			<section>
