--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 		<nav class="navbar">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a href="#" class="nav-link">
+					<a href="index.html" class="nav-link">
 						<i class="fa-solid fa-house fa-2xl"></i>
 						<span class="link-text">Home</span>
 					</a>
@@ -32,23 +32,9 @@
 				</li>
 
 				<li class="nav-item">
-					<a href="#" class="nav-link">
-						<i class="fa-solid fa-location-pin fa-2xl center"></i>
-						<span class="link-text">Location</span>
-					</a>
-				</li>
-
-				<li class="nav-item">
-					<a href="#" class="nav-link">
+					<a href="about-us.html" class="nav-link">
 						<i class="fa-solid fa-user fa-2xl center"></i>
 						<span class="link-text">About&nbsp;us</span>
-					</a>
-				</li>
-
-				<li class="nav-item">
-					<a href="#" class="nav-link">
-						<i class="fa-solid fa-bars fa-2xl center"></i>
-						<span class="link-text">More</span>
 					</a>
 				</li>
 			</ul>
@@ -68,9 +54,25 @@
 				</section>
 			</header>
 			<section>
-				<p>
-					Tasteful Express is a delivery service that aims to bring your favorite foods right to your doorstep.
-				</p>
+				<div>
+					<h1>
+						Tasteful Express is a delivery service that aims to bring your favorite foods right to your doorstep.<br><br>
+						Here are some fast food and restaurant chains we deliver
+					</h1>
+				</div>
+				<div class="carousel">
+					<button class="carousel-button-previous">&#10094</button>
+					<div class="carousel-images">
+						<img src="assets/manginasal.png" class="image-carousel" alt="">
+						<img src="assets/mcdonalds.png" class="image-carousel" alt="">
+						<img src="assets/jollibee.png" class="image-carousel" alt="">
+						<img src="assets/kfc.jpg" class="image-carousel" alt="">
+						<img src="assets/kennyrogers.png" alt="" class="image-carousel">
+						<img src="assets/shakeys.png" alt="" class="image-carousel">
+						<img src="assets/popeyes.png" alt="" class="image-carousel">
+					</div>
+					<button class="carousel-button-next">&#10095</button>
+				</div>
 			</section>
 		</main>
 	</body>
