--- a/src/about-us.html
+++ b/src/about-us.html
@@ -26,22 +26,22 @@
 			
 			<li class="nav-item">
 				<a href="#" class="nav-link">
-					<i class="fa-solid fa-utensils fa-2xl center"></i>
-					<span class="link-text">Food</span>
+					<i class="fa-solid fa-user fa-2xl center"></i>
+					<span class="link-text">About&nbsp;us</span>
 				</a>
 			</li>
 
 			<li class="nav-item">
-				<a href="#" class="nav-link">
-					<i class="fa-solid fa-user fa-2xl center"></i>
-					<span class="link-text">About&nbsp;us</span>
+				<a href="faq.html" class="nav-link">
+					<i class="fa-sharp fa-solid fa-question fa-2xl center"></i>
+					<span class="link-text">FAQ</span>
 				</a>
 			</li>
 		</ul>
 	</nav>
 
 	<main>
-		Hello Welcome to the rice fields
+		We are group 3 from APEC schools and we have created Tasteful Express
 	</main>
 </body>
 </html>
