--- a/src/faq.html
+++ b/src/faq.html
@@ -26,7 +26,7 @@
 			</li>
 			
 			<li class="nav-item">
-				<a href="#" class="nav-link">
+				<a href="about-us.html" class="nav-link">
 					<i class="fa-solid fa-user fa-2xl center"></i>
 					<span class="link-text">About&nbsp;us</span>
 				</a>
