--- a/src/about-us.html
+++ b/src/about-us.html
@@ -40,8 +40,13 @@
 		</ul>
 	</nav>
 
-	<main>
-		We are group 3 from APEC schools and we have created Tasteful Express
+	<main class="faq">
+		<div class="header">
+			<img src="assets/faq-backround.jpg" alt="">
+			<h1>About Us</h1>
+		</div>
+		The Tasteful Express group is an global online food delivery marketplace. Headquartered in Para&ntilde;aque, Philippines. It operates in more than 40 countries across 5 continents.<br><br>
+		Tasteful Express allows users to conveniently discover food around their neighbourhood and directly order their favourite meals online or via mobile.
 	</main>
 </body>
 </html>
