added extra content and fixed about-us page

--- a/about-us.html
+++ b/about-us.html
@@ -40,13 +40,21 @@
 		</ul>
 	</nav>
 
-	<main class="faq">
+	<main class="about-us">
 		<div class="header">
 			<img src="assets/faq-backround.jpg" alt="">
 			<h1>About Us</h1>
 		</div>
-		The Tasteful Express group is an global online food delivery marketplace. Headquartered in Para&ntilde;aque, Philippines. It operates in more than 40 countries across 5 continents.<br><br>
-		Tasteful Express allows users to conveniently discover food around their neighbourhood and directly order their favourite meals online or via mobile.
+		<section>
+			<div>
+				<p>
+					The Tasteful Express group is an global online food delivery marketplace. Headquartered in Para&ntilde;aque, Philippines. It operates in more than 40 countries across 5 continents.<br><br>
+					Tasteful Express allows users to conveniently discover food around their neighbourhood and directly order their favourite meals online or via mobile.<br><br>
+					We are a small team of problem solvers, designers, thinkers and tinkers, working around the clock to make Tasteful Express the most powerful online tool for food delivery. We believe that ordering food should be easy, fast and definitely fun!<br><br>
+					Tired of the same take-out for lunch? Too lazy to go out for dinner? Simply download the Tasteful Express app or go to <a href="https://amatthewp.github.io/LifeLabsQ2PBA/">https://amatthewp.github.io/LifeLabsQ2PBA/</a>, and see which restaurants deliver to you. Food delivery has never been easier! 
+				</p>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
