--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,18 @@
 					<button class="carousel-button-next">&#10095</button>
 				</div>
 			</section>
+
+			<section class="intro-video">
+				<div>
+					<p>Watch our introductory video to learn more about us.</p>
+				</div>
+				<div>
+					<video width="640" height="480" controls>
+						<source src="assets/Intro Vid.mp4">
+						Your browser does not support playing videos
+					</video>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
