--- a/src/journey.html
+++ b/src/journey.html
@@ -46,6 +46,13 @@
 				</li>
 
 				<li class="nav-item">
+					<a href="journey.html" class="nav-link">
+						<i class="fa-solid fa-arrow-right fa-2xl"></i>
+						<span class="link-text">Our&nbsp;Journey</span>
+					</a>
+				</li>
+
+				<li class="nav-item">
 					<a href="faq.html" class="nav-link">
 						<i class="fa-sharp fa-solid fa-question fa-2xl center"></i>
 						<span class="link-text">FAQ</span>
@@ -53,54 +60,4 @@
 				</li>
 			</ul>
 		</nav>
-
-		<main>
-			<header>
-				<div>
-					<img src="assets/Logo cropped.png">
-				</div>
-				<section>
-					<div>
-						<h1>
-							Happiness at your doorstep
-						</h1>
-					</div>
-				</section>
-			</header>
-			<section class="preview">
-				<div>
-					<h1>
-						Tasteful Express is a delivery service that aims to bring your favorite foods right to your doorstep.<br><br>
-						Here are some fast food and restaurant chains we deliver
-					</h1>
-				</div>
-				<div class="carousel">
-					<button class="carousel-button-previous">&#10094</button>
-					<div class="carousel-images">
-						<img src="assets/manginasal.png" class="image-carousel" alt="">
-						<img src="assets/mcdonalds.png" class="image-carousel" alt="">
-						<img src="assets/jollibee.png" class="image-carousel" alt="">
-						<img src="assets/kfc.jpg" class="image-carousel" alt="">
-						<img src="assets/kennyrogers.png" alt="" class="image-carousel">
-						<img src="assets/shakeys.png" alt="" class="image-carousel">
-						<img src="assets/popeyes.png" alt="" class="image-carousel">
-					</div>
-					<button class="carousel-button-next">&#10095</button>
-				</div>
-			</section>
-
-			<section class="intro-video">
-				<div>
-					<p>Watch our introductory video to learn more about us.</p>
-				</div>
-				<div>
-					<video width="640" height="480" controls>
-						<source src="assets/Intro Vid.mp4">
-						Your browser does not support playing videos
-					</video>
-				</div>
-			</section>
-		</main>
-	</body>
 </html>
-
