added videos and what we learned

--- a/about-us.html
+++ b/about-us.html
@@ -32,6 +32,20 @@
 			</li>
 
 			<li class="nav-item">
+				<a href="videos.html" class="nav-link">
+					<i class="fa-solid fa-video fa-2xl center"></i>	
+					<span class="link-text">Videos</span>
+				</a>
+			</li>
+
+			<li class="nav-item">
+				<a href="what-we-learned.html" class="nav-link">
+					<i class="fa-solid fa-book fa-2xl"></i>
+					<span class="link-text">What&nbsp;we&nbsp;learned</span>
+				</a>
+			</li>
+
+			<li class="nav-item">
 				<a href="faq.html" class="nav-link">
 					<i class="fa-sharp fa-solid fa-question fa-2xl center"></i>
 					<span class="link-text">FAQ</span>
