--- a/videos.html
+++ b/videos.html
@@ -45,6 +45,7 @@
 					</a>
 				</li>
 
+
 				<li class="nav-item">
 					<a href="faq.html" class="nav-link">
 						<i class="fa-sharp fa-solid fa-question fa-2xl center"></i>
@@ -55,52 +56,21 @@
 		</nav>
 
 		<main>
-			<header>
-				<div>
-					<img src="assets/Logo cropped.png">
-				</div>
+			<section class="advertisments">
 				<section>
-					<div>
-						<h1>
-							Happiness at your doorstep
-						</h1>
+					<div class="caption">
+						<h1>Watch our advertisments to learn more about us</h1>
 					</div>
 				</section>
-			</header>
-			<section class="preview">
-				<div>
-					<h1>
-						Tasteful Express is a delivery service that aims to bring your favorite foods right to your doorstep.<br><br>
-						Here are some fast food and restaurant chains we deliver
-					</h1>
-				</div>
-				<div class="carousel">
-					<button class="carousel-button-previous">&#10094</button>
-					<div class="carousel-images">
-						<img src="assets/manginasal.png" class="image-carousel" alt="">
-						<img src="assets/mcdonalds.png" class="image-carousel" alt="">
-						<img src="assets/jollibee.png" class="image-carousel" alt="">
-						<img src="assets/kfc.jpg" class="image-carousel" alt="">
-						<img src="assets/kennyrogers.png" alt="" class="image-carousel">
-						<img src="assets/shakeys.png" alt="" class="image-carousel">
-						<img src="assets/popeyes.png" alt="" class="image-carousel">
-					</div>
-					<button class="carousel-button-next">&#10095</button>
-				</div>
-			</section>
 
-			<section class="intro-video">
-				<div>
-					<p>Watch our introductory video to learn more about us.</p>
-				</div>
-				<div>
-					<video width="640" height="480" controls>
-						<source src="assets/Intro Vid.mp4">
-						Your browser does not support playing videos
-					</video>
+				<div class="video-preview">
+					<button class="left">&#10094</button>
+					<iframe class="advertisment-video" width="560" height="315" src="https://www.youtube.com/embed/oS5immnZKrU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					<iframe class="advertisment-video" width="560" height="315" src="https://www.youtube.com/embed/lhygwi_OLAw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					<button class="right">&#10095</button>
+
 				</div>
 			</section>
 		</main>
 	</body>
 </html>
-
